RESOLVED FIXED11621
REGRESSION (Native slider): slider thumb not updated when the mouse is dragged/released out of range
https://bugs.webkit.org/show_bug.cgi?id=11621
Summary REGRESSION (Native slider): slider thumb not updated when the mouse is dragge...
mitz
Reported 2006-11-16 16:07:15 PST
If you grab a slider's thumb and drag it fast enough (on a machine that's slow enough) past the edge of the slider, it doesn't move all the way to the edge, and when you release the mouse (still out of the slider's range), the thumb maintains its "pressed" appearance (this is true whenever you release the thumb with while the mouse is "out of range"). Forcing a repaint fixes thumb position and appearance. Another bug that is probably related is that when you click the slider track and hold still, the thumb gets the "pressed" appearance but doesn't jump to where you clicked. Thumb painting seems to be always "lagging by one event".
Attachments
Update the thumb's layer's position (1.22 KB, patch)
2007-02-10 03:27 PST, mitz
aroben: review+
Automated "manual" test (1005 bytes, text/html)
2007-02-10 03:28 PST, mitz
no flags
Mark Rowe (bdash)
Comment 1 2007-01-28 16:08:36 PST
mitz
Comment 2 2007-02-10 03:27:38 PST
Created attachment 13101 [details] Update the thumb's layer's position
mitz
Comment 3 2007-02-10 03:28:30 PST
Created attachment 13102 [details] Automated "manual" test This test works in Safari but not in DumpRenderTree.
Adam Roben (:aroben)
Comment 4 2007-02-10 03:32:00 PST
Comment on attachment 13101 [details] Update the thumb's layer's position r=me
David Kilzer (:ddkilzer)
Comment 5 2007-02-10 17:11:43 PST
Committed revision 19556. Added the automated "manual" test to WebCore/manual-tests.
Note You need to log in before you can comment on or make changes to this bug.